Fixed colour contrast

--- a/phone.css
+++ b/phone.css
@@ -38,14 +38,14 @@ header li{
 
 header li a{
     text-decoration: none;
-    color: rgb(40, 155, 221);
+    color: rgb(34, 34, 120);
     
     
 }
 
 /*change colour of navbar when hovered over*/
 #header .navBar ul li:hover a {
-    color:rgb(29, 29, 104);
+    color:rgb(50, 191, 242);
 }
 
 #header .navBar{
