--- a/tablet.css
+++ b/tablet.css
@@ -35,7 +35,7 @@ header li{
 
 header li a{
     text-decoration: none;
-    color: rgb(40, 155, 221);
+    color: rgb(29, 29, 104);
     font-size: 20px;
     
     
@@ -43,7 +43,8 @@ header li a{
 
 /*change colour of navbar when hovered over*/
 #header .navBar ul li:hover a {
-    color:rgb(29, 29, 104);
+    color:rgb(40, 155, 221)
+  
 }
 
 #header .navBar{
@@ -211,7 +212,7 @@ img{
 
 
 #vidInstruct{
-    color: green;
+    color: rgb(34, 34, 120);
 }
 
 #IntroPara{
